Include version in releaseName to workaround kustomize issue 3848

--- a/clusters/default/argocd/bootstrap/kustomization.yaml
+++ b/clusters/default/argocd/bootstrap/kustomization.yaml
@@ -7,4 +7,4 @@ helmCharts:
   repo: https://gnunn-gitops.github.io/helm-charts
   valuesFile: values.yaml
   namespace: openshift-gitops
-  releaseName: argocd-app-of-app
+  releaseName: argocd-app-of-app-0.2.0
