Switch to helm chart

--- a/components/apps/kyverno/base/kustomization.yaml
+++ b/components/apps/kyverno/base/kustomization.yaml
@@ -1,8 +1,15 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-resources:
-- https://raw.githubusercontent.com/kyverno/kyverno/main/config/release/install.yaml
+# resources:
+# - https://raw.githubusercontent.com/kyverno/kyverno/main/config/release/install.yaml
+
+helmCharts:
+- name: kyverno
+  version: v2.3.3
+  repo: https://kyverno.github.io/kyverno
+  namespace: kyverno
+  releaseName: kyverno-v2.3.3
 
 patches:
 # - patch: |-
