--- a/components/apps/compliance-operator/overlays/scheduled-master/kustomization.yaml
+++ b/components/apps/compliance-operator/overlays/scheduled-master/kustomization.yaml
@@ -5,7 +5,7 @@ kind: Kustomization
 namespace: openshift-compliance
 
 resources:
-- https://github.com/redhat-cop/gitops-catalog/compliance-operator/overlays/scheduled
+- github.com/redhat-cop/gitops-catalog/compliance-operator/aggregate/scheduled/
 
 patchesStrategicMerge:
   - patch-scansetting.yaml
