--- a/tenants/product-catalog/argocd/root/base/values.yaml
+++ b/tenants/product-catalog/argocd/root/base/values.yaml
@@ -31,7 +31,7 @@ projects:
         server: https://kubernetes.default.svc
       - namespace: 'product-catalog-prod'
         server: https://kubernetes.default.svc
-      - name: 'stackrox'
+      - namespace: 'stackrox'
         server: https://kubernetes.default.svc
     extraFields: |
       clusterResourceWhitelist:
