--- a/components/apps/gitops-operator/base/gitops-operator-cr.yaml
+++ b/components/apps/gitops-operator/base/gitops-operator-cr.yaml
@@ -13,6 +13,7 @@ spec:
     openShiftOAuth: true
   applicationInstanceLabelKey: argocd.argoproj.io/instance
   applicationSet: {}
+  kustomizeBuildOptions: "--enable-helm"
   server:
     insecure: false
     route:
@@ -29,6 +30,49 @@ spec:
       ignoreDifferences: |
         jsonPointers:
         - /spec/datasources/0/secureJsonData/httpHeaderValue1
+    image.openshift.io/ImageStream:
+      health.lua: |
+        hs = {}
+        hs.status = "Progressing"
+        hs.message = ""
+        if obj.status ~= nil then
+          if obj.status.tags ~= nil then
+            numTags = 0
+            for _ , item in pairs(obj.status.tags) do
+              numTags = numTags + 1
+              numItems = 0
+              if item.tags ~= nil then
+                for _ , item in pairs(item.tags) do
+                  numItems = numItems + 1
+                end
+                if numItems == 0 then
+                  return hs
+                end
+              end
+            end
+            if numTags > 0 then
+              hs.status = "Healthy"
+              hs.message = "ImageStream has tags resolved"
+              return hs
+            end
+          end
+        end
+        return hs
+    build.openshift.io/Build:
+      health.lua: |
+        hs = {}
+        if obj.status ~= nil then
+          if obj.status.phase ~= nil then
+            if obj.status.phase == "Complete" then
+              hs.status = "Healthy"
+              hs.message = obj.status.phase
+              return hs
+            end
+          end
+        end
+        hs.status = "Progressing"
+        hs.message = "Waiting for Build to complete"
+        return hs
     PersistentVolumeClaim:
       health.lua: |
         hs = {}
