--- a/bootstrap/overlays/aws.cluster/cluster-config-manager-app.yaml
+++ b/bootstrap/overlays/aws.cluster/cluster-config-manager-app.yaml
@@ -9,7 +9,7 @@ spec:
   destination:
     namespace: openshift-gitops
     server: https://kubernetes.default.svc
-  project: cluster-config
+  project: default
   source:
     path: clusters/aws.cluster/argocd/apps/cluster/overlays/default
     repoURL: https://github.com/gnunn-gitops/cluster-config.git
