--- a/bootstrap/overlays/local.home/cluster-config-bootstrap-app.yaml
+++ b/bootstrap/overlays/local.home/cluster-config-bootstrap-app.yaml
@@ -9,7 +9,7 @@ spec:
   destination:
     namespace: openshift-gitops
     server: https://kubernetes.default.svc
-  project: cluster-config
+  project: default
   source:
     path: clusters/local.home/argocd/bootstrap
     repoURL: https://github.com/gnunn-gitops/cluster-config.git
