Fix various niggles

--- a/components/apps/gitops-operator/base/create-pipeline-local-user-job.yaml
+++ b/components/apps/gitops-operator/base/create-pipeline-local-user-job.yaml
@@ -32,6 +32,7 @@ spec:
                   kubectl create secret generic argocd-env-secret --from-literal=ARGOCD_AUTH_TOKEN=${TOKEN} -n ${CICD_NAMESPACE}
                 else
                   echo "Secret argocd-cluster not available, could not interact with API"
+                  exit 1
                 fi
             else
                 echo "Pipeline account already added, skipping"
