--- a/tenants/product-catalog/argocd/root/base/kustomization.yaml
+++ b/tenants/product-catalog/argocd/root/base/kustomization.yaml
@@ -9,6 +9,9 @@ helmCharts:
   namespace: openshift-gitops
   releaseName: argocd-app-of-app-0.2.0
 
+resources:
+- ../../../rbac/base
+
 patches:
   - target:
       kind: Application
