--- a/components/apps/gitops-operator/base/create-pipeline-local-user-job.yaml
+++ b/components/apps/gitops-operator/base/create-pipeline-local-user-job.yaml
@@ -9,7 +9,7 @@ spec:
   template:
     spec:
       containers:
-      - image: registry.redhat.io/openshift-gitops-1/argocd-rhel8:v1.4.2
+      - image: registry.redhat.io/openshift-gitops-1/argocd-rhel8:v1.5.0
         command:
           - /bin/bash
           - -c
@@ -25,17 +25,28 @@ spec:
                 then
                   # Create pipeline user
                   kubectl patch cm argocd-cm --patch '{"data": {"accounts.pipeline": "apiKey"}}'
-                  # Update password
-                  PASSWORD=$(oc get secret argocd-cluster -o jsonpath="{.data.admin\.password}" | base64 -d)
-                  argocd login --plaintext --username admin --password ${PASSWORD} argocd-server
-                  TOKEN=$(argocd account generate-token --account pipeline)
-                  kubectl create secret generic argocd-env-secret --from-literal=ARGOCD_AUTH_TOKEN=${TOKEN} -n ${CICD_NAMESPACE}
                 else
                   echo "Secret argocd-cluster not available, could not interact with API"
-                  exit 1
                 fi
             else
                 echo "Pipeline account already added, skipping"
+            fi
+
+            HAS_SECRET=$(kubectl get secret argocd-env-secret -n $CICD_NAMESPACE --ignore-not-found)
+            if [ -z "$HAS_SECRET" ];
+            then
+              echo "No argo-env-secret present, creating"
+              PASSWORD=$(oc get secret argocd-cluster -o jsonpath="{.data.admin\.password}" | base64 -d)
+              argocd login --insecure --username admin --password ${PASSWORD} argocd-server
+              TOKEN=$(argocd account generate-token --account pipeline)
+              if [ "$TOKEN" ];
+              then
+                kubectl create secret generic argocd-env-secret --from-literal=ARGOCD_AUTH_TOKEN=${TOKEN} -n ${CICD_NAMESPACE}
+              else
+                echo "Token $TOKEN could not be generated, no secret created"
+              fi
+            else
+              echo "The secret argocd-env-secret already exists, skipping"
             fi
         env:
         # The CICD namespace where the token needs to be deployed to
