Add opentlc-mgr user to argocdadmins group

--- a/components/configs/groups-and-membership/overlays/default/argocdadmins-group-users.yaml
+++ b/components/configs/groups-and-membership/overlays/default/argocdadmins-group-users.yaml
@@ -10,4 +10,7 @@
   value: "admin"
 - op: add
   path: /users/-
-  value: "gnunn@redhat.com"  
+  value: "gnunn@redhat.com"
+- op: add
+  path: /users/-
+  value: "opentlc-mgr"
