--- a/components/apps/loki/instance/base/clusterlogforwarder.yaml
+++ b/components/apps/loki/instance/base/clusterlogforwarder.yaml
@@ -2,6 +2,8 @@ apiVersion: logging.openshift.io/v1
 kind: ClusterLogForwarder
 metadata:
   name: instance
+  annotations:
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
 spec:
   outputs:
    - name: loki-app
