--- a/components/apps/loki/instance/base/lokistack.yaml
+++ b/components/apps/loki/instance/base/lokistack.yaml
@@ -2,6 +2,8 @@ apiVersion: loki.grafana.com/v1beta1
 kind: LokiStack
 metadata:
   name: lokistack
+  annotations:
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
 spec:
   size: 1x.extra-small
   storage:
