--- a/components/apps/loki/operator/loki/base/operatorgroup.yaml
+++ b/components/apps/loki/operator/loki/base/operatorgroup.yaml
@@ -2,6 +2,4 @@ apiVersion: operators.coreos.com/v1
 kind: OperatorGroup
 metadata:
   name: openshift-operators-redhat
-spec:
-  targetNamespaces:
-  - openshift-operators-redhat
+spec: {}
