Missed adding logging instance

--- a/components/apps/loki/instance/base/clusterlogging.yaml
+++ b/components/apps/loki/instance/base/clusterlogging.yaml
@@ -2,7 +2,7 @@ apiVersion: logging.openshift.io/v1
 kind: ClusterLogging
 metadata:
   annotations:
-    logging.openshift.io/preview-vector-collector: enabled
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
   name: instance
 spec:
   collection:
