Add lokigateway token secret

--- a/components/apps/loki/instance/base/kustomization.yaml
+++ b/components/apps/loki/instance/base/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 namespace: openshift-logging
 
 resources:
+- lokigateway-secret.yaml
 - role.yaml
 - lokistack.yaml
 - clusterlogforwarder.yaml
