Label tenant namespaces

--- a/tenants/product-catalog/namespaces/overlays/cicd/cicd-namespace.yaml
+++ b/tenants/product-catalog/namespaces/overlays/cicd/cicd-namespace.yaml
@@ -6,4 +6,5 @@ metadata:
     openshift.io/display-name:  Product Catalog CI/CD
   labels:
     argocd.argoproj.io/managed-by: product-catalog-gitops
+    tenant: product-catalog
   name: product-catalog-cicd
