--- a/tenants/product-catalog/namespaces/overlays/monitor/monitor-namespace.yaml
+++ b/tenants/product-catalog/namespaces/overlays/monitor/monitor-namespace.yaml
@@ -6,4 +6,5 @@ metadata:
     openshift.io/display-name:  Product Catalog Monitor
   labels:
     argocd.argoproj.io/managed-by: product-catalog-gitops
+    tenant: product-catalog
   name: product-catalog-monitor
