--- a/components/apps/pipelines-operator/overlays/chains/kustomization.yaml
+++ b/components/apps/pipelines-operator/overlays/chains/kustomization.yaml
@@ -2,6 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+- openshift-pipelines-namespace.yaml
+- signing-secrets.yaml
+- chains-config-cm.yaml
 - github.com/redhat-cop/gitops-catalog/openshift-pipelines-operator/overlays/stable
 - tekton-chain.yaml
 
