--- a/components/apps/kyverno/overlays/policies/verify-signed-images.yaml
+++ b/components/apps/kyverno/overlays/policies/verify-signed-images.yaml
@@ -12,7 +12,7 @@ metadata:
 spec:
   validationFailureAction: audit
   failurePolicy: Ignore
-  background: true
+  background: false
   webhookTimeoutSeconds: 30
   rules:
     - name: verify-image-quay-io-gnunn-client
