--- a/components/configs/oauth/overlays/default/kustomization.yaml
+++ b/components/configs/oauth/overlays/default/kustomization.yaml
@@ -6,7 +6,5 @@ commonAnnotations:
   argocd.argoproj.io/sync-options: Prune=false
 
 resources:
-- https://github.com/redhat-cop/gitops-catalog/oauth/overlays/htpass
-
-patchesStrategicMerge:
-- patch-htpass-secret.yaml
+- htpass-secret.yaml
+- htpass-oauth.yaml
