Default to light theme

--- a/tenants/product-catalog/namespaces/overlays/monitor/kustomization.yaml
+++ b/tenants/product-catalog/namespaces/overlays/monitor/kustomization.yaml
@@ -16,6 +16,14 @@ patches:
   target:
     kind: RoleBinding
     name: gitops-argocd-extended-rolebinding
+- patch: |-
+    - op: add
+      path: /spec/config/users
+      value:
+        default_theme: light
+  target:
+    kind: Grafana
+    name: grafana
 
 patchesJson6902:
 - target:
