--- a/tenants/product-catalog/namespaces/base/kustomization.yaml
+++ b/tenants/product-catalog/namespaces/base/kustomization.yaml
@@ -4,4 +4,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 resources:
 - ../../../../components/apps/tenant-namespace/overlays/gitops
 - ../../../defaults/networkpolicy/base
-- user1-rolebinding.yaml
+# - user1-rolebinding.yaml
+- product-catalog-admins-rolebinding.yaml
