--- a/components/apps/gitops-operator/base/kustomization.yaml
+++ b/components/apps/gitops-operator/base/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 resources:
 - create-pipeline-local-user-job.yaml
 - gitops-operator-cr.yaml
+- argocd-dex-server-rolebinding.yaml
 # - gitops-workaround-993-role.yaml
 # These can be used to patch an existing in-cluster secret. Not used
 # since I've opted to deploy the secret directly above.
