--- a/clusters/rhpds/argocd/bootstrap/values.yaml
+++ b/clusters/rhpds/argocd/bootstrap/values.yaml
@@ -20,6 +20,13 @@ applications:
     source:
       path: components/apps/acs-operator/overlays/oauth
 
+  acs-tokens:
+    annotations:
+      argocd.argoproj.io/compare-options: IgnoreExtraneous
+      argocd.argoproj.io/sync-wave: '61'
+    source:
+      path: tenants/acs-tokens/base
+
   openshift-monitoring:
     annotations:
       argocd.argoproj.io/compare-options: IgnoreExtraneous
