--- a/clusters/local.home/argocd/bootstrap/values.yaml
+++ b/clusters/local.home/argocd/bootstrap/values.yaml
@@ -13,6 +13,15 @@ default:
 
 applications:
 
+  alertmanager:
+    annotations:
+      argocd.argoproj.io/compare-options: IgnoreExtraneous
+      argocd.argoproj.io/sync-wave: '11'
+    destination:
+      namespace: openshift-monitoring
+    source:
+      path: components/configs/alertmanager/base
+
   acs:
     annotations:
       argocd.argoproj.io/compare-options: IgnoreExtraneous
