--- a/clusters/local.home/argocd/bootstrap/values.yaml
+++ b/clusters/local.home/argocd/bootstrap/values.yaml
@@ -29,6 +29,13 @@ applications:
     source:
       path: clusters/local.home/apps/acs-operator/overlays/certificate
 
+  acm:
+    annotations:
+      argocd.argoproj.io/compare-options: IgnoreExtraneous
+      argocd.argoproj.io/sync-wave: '21'
+    source:
+      path: components/apps/acm/overlays/aggregate
+
   # acs-tokens:
   #   annotations:
   #     argocd.argoproj.io/compare-options: IgnoreExtraneous
