--- a/components/apps/tekton-cluster-tasks/base/rox-image-check-task.yaml
+++ b/components/apps/tekton-cluster-tasks/base/rox-image-check-task.yaml
@@ -15,7 +15,6 @@ spec:
         description: Whether the task passed or failed, "true" for a pass, "false" for a fail.
   workspaces:
     - acs-central
-    - acs-token
   steps:
     - name: rox-image-check
       image: centos:8
@@ -23,8 +22,8 @@ spec:
         #!/usr/bin/env bash
         set +x
 
-        ROX_CENTRAL_ENDPOINT=$(cat $(workspaces.acs-central.path)/ARGOCD_SERVER)
-        ROX_API_TOKEN=$(cat $(workspaces.acs-token.path)/ROX_API_TOKEN)
+        ROX_CENTRAL_ENDPOINT=$(cat $(workspaces.acs-central.path)/rox_central_endpoint)
+        ROX_API_TOKEN=$(cat $(workspaces.acs-central.path)/rox_api_token)
 
         curl -k -L -H "Authorization: Bearer $ROX_API_TOKEN" https://$ROX_CENTRAL_ENDPOINT/api/cli/download/roxctl-linux --output ./roxctl  > /dev/null; echo "Getting roxctl"
         chmod +x ./roxctl  > /dev/null
