Update ACS tasks to use secret as workspace

--- a/components/apps/tekton-cluster-tasks/base/rox-image-check-task.yaml
+++ b/components/apps/tekton-cluster-tasks/base/rox-image-check-task.yaml
@@ -14,7 +14,8 @@ spec:
       - name: check_passed
         description: Whether the task passed or failed, "true" for a pass, "false" for a fail.
   workspaces:
-    - acs-central
+    - name: acs-central
+      description: The secret with the central endpoint (rox-central_endpoint) and api token (rox_api_token)
   steps:
     - name: rox-image-check
       image: centos:8
