Make acs-central workspace optional and add guard

--- a/components/apps/tekton-cluster-tasks/base/rox-image-check-task.yaml
+++ b/components/apps/tekton-cluster-tasks/base/rox-image-check-task.yaml
@@ -16,6 +16,7 @@ spec:
   workspaces:
     - name: acs-central
       description: The secret with the central endpoint (rox-central_endpoint) and api token (rox_api_token)
+      optional: true
   steps:
     - name: rox-image-check
       image: centos:8
