--- a/components/apps/tekton-cluster-tasks/base/rox-image-check-task.yaml
+++ b/components/apps/tekton-cluster-tasks/base/rox-image-check-task.yaml
@@ -19,7 +19,7 @@ spec:
       optional: true
   steps:
     - name: rox-image-check
-      image: centos:8
+      image: registry.redhat.io/advanced-cluster-security/rhacs-roxctl-rhel8:3.70
       script: |
         #!/usr/bin/env bash
         set +x
@@ -34,9 +34,7 @@ spec:
 
         echo "Scanning against endpoint ${ROX_CENTRAL_ENDPOINT}"
 
-        curl -k -L -H "Authorization: Bearer $ROX_API_TOKEN" https://$ROX_CENTRAL_ENDPOINT/api/cli/download/roxctl-linux --output ./roxctl  > /dev/null; echo "Getting roxctl"
-        chmod +x ./roxctl  > /dev/null
-        if ./roxctl image check --insecure-skip-tls-verify -e $ROX_CENTRAL_ENDPOINT --image $(params.image); then
+        if roxctl image check --insecure-skip-tls-verify -e $ROX_CENTRAL_ENDPOINT --image $(params.image); then
           echo -n "true" > $(results.check_passed.path)
         else
           echo -n "false" > $(results.check_passed.path)
