Add ACM config policies for ACM specific items like Gatekeeper

--- a/clusters/local.home/argocd/bootstrap/values.yaml
+++ b/clusters/local.home/argocd/bootstrap/values.yaml
@@ -36,6 +36,13 @@ applications:
     source:
       path: components/apps/acm/overlays/aggregate
 
+  acm-config-policies:
+    annotations:
+      # Install after ACM
+      argocd.argoproj.io/sync-wave: '22'
+    source:
+      path: components/apps/acm/overlays/config-policies
+
   # acs-tokens:
   #   annotations:
   #     argocd.argoproj.io/compare-options: IgnoreExtraneous
