Deploy gatekeeper to local-cluster by default

--- a/components/apps/acm/overlays/config-policies/gatekeeper-install-policy.yaml
+++ b/components/apps/acm/overlays/config-policies/gatekeeper-install-policy.yaml
@@ -136,4 +136,4 @@ spec:
     type: ManagedClusterConditionAvailable
   clusterSelector:
     matchExpressions:
-      - {key: environment, operator: In, values: ["dev"]}
+      - {key: name, operator: In, values: ["local-cluster"]}
