Shorten namespace to meet length constraint

--- a/components/apps/acm/overlays/config-policies/config-policy-namespace.yaml
+++ b/components/apps/acm/overlays/config-policies/config-policy-namespace.yaml
@@ -4,4 +4,4 @@ metadata:
   annotations:
     openshift.io/description: ACM Configuration Policies
     openshift.io/display-name:  ACM Configuration Policies
-  name: open-cluster-management-config-policies
+  name: acm-config-policies
