--- a/components/apps/acm/overlays/config-policies/kustomization.yaml
+++ b/components/apps/acm/overlays/config-policies/kustomization.yaml
@@ -3,3 +3,5 @@ namespace: acm-config-policies
 resources:
 - config-policy-namespace.yaml
 - gatekeeper-install-policy.yaml
+- gatekeeper-exclude-namespaces.yaml
+- gatekeeper-probes-notset.yaml
