Add consolelinks for nexus and sonarqube

--- a/clusters/local.home/apps/consolelinks/overlays/default/kustomization.yaml
+++ b/clusters/local.home/apps/consolelinks/overlays/default/kustomization.yaml
@@ -4,3 +4,5 @@ kind: Kustomization
 resources:
 - ../../../../../../components/configs/consolelinks/base
 - acs-consolelink.yaml
+- nexus-consolelink.yaml
+- sonarqube-consolelink.yaml
