--- a/clusters/local.home/apps/consolelinks/overlays/default/kustomization.yaml
+++ b/clusters/local.home/apps/consolelinks/overlays/default/kustomization.yaml
@@ -4,5 +4,5 @@ kind: Kustomization
 resources:
 - ../../../../../../components/configs/consolelinks/base
 - acs-consolelink.yaml
-- nexus-consolelink.yaml
-- sonarqube-consolelink.yaml
+# - nexus-consolelink.yaml
+# - sonarqube-consolelink.yaml
