Make Nexus and Sonarqube TLS

--- a/components/apps/dev-tools/overlays/default/kustomization.yaml
+++ b/components/apps/dev-tools/overlays/default/kustomization.yaml
@@ -22,3 +22,10 @@ patches:
   target:
     kind: Deployment
     name: sonarqube
+- patch: |-
+    - op: add
+      path: /spec/tls
+      value:
+        termination: edge
+  target:
+    kind: Route
