Add IgnoreExtraneous annotation since policies are copied by ACM

--- a/components/apps/acm/overlays/config-policies/kustomization.yaml
+++ b/components/apps/acm/overlays/config-policies/kustomization.yaml
@@ -1,5 +1,8 @@
 namespace: acm-config-policies
 
+commonAnnotations:
+  argocd.argoproj.io/compare-options: IgnoreExtraneous
+
 resources:
 - config-policy-namespace.yaml
 - gatekeeper-install-policy.yaml
