Add kyverno to rhpds for demo

--- a/clusters/rhpds/argocd/bootstrap/values.yaml
+++ b/clusters/rhpds/argocd/bootstrap/values.yaml
@@ -41,3 +41,28 @@ applications:
       argocd.argoproj.io/sync-wave: '51'
     source:
       path: tenants/product-catalog/argocd/root/base
+
+  kyverno:
+    annotations:
+      argocd.argoproj.io/compare-options: IgnoreExtraneous
+      argocd.argoproj.io/sync-wave: '21'
+    destination:
+      namespace: kyverno
+    source:
+      path: components/apps/kyverno/overlays/policies
+    syncPolicyRetry:
+      limit: 5
+      backoff:
+        duration: 5s
+        factor: 2
+        maxDuration: 3m
+    extraFields: |
+      ignoreDifferences:
+        - group: kyverno.io
+          kind: ClusterPolicy
+          jsonPointers:
+          - /spec/rules
+        - group: kyverno.io
+          kind: Policy
+          jsonPointers:
+          - /spec/rules
