Add additional policies and use policy selector instead of cluster name

--- a/components/apps/acm/overlays/config-policies/gatekeeper-install-policy.yaml
+++ b/components/apps/acm/overlays/config-policies/gatekeeper-install-policy.yaml
@@ -136,4 +136,4 @@ spec:
     type: ManagedClusterConditionAvailable
   clusterSelector:
     matchExpressions:
-      - {key: name, operator: In, values: ["local-cluster"]}
+      - {key: policy, operator: In, values: ["opa"]}
