--- a/components/apps/acm/overlays/config-policies/gatekeeper-exclude-namespaces.yaml
+++ b/components/apps/acm/overlays/config-policies/gatekeeper-exclude-namespaces.yaml
@@ -128,4 +128,4 @@ spec:
     type: ManagedClusterConditionAvailable
   clusterSelector:
     matchExpressions:
-      - {key: name, operator: In, values: ["local-cluster"]}
+      - {key: policy, operator: In, values: ["opa"]}
